--- a/client/src/componentsCSS/player.module.css
+++ b/client/src/componentsCSS/player.module.css
@@ -1,3 +1,8 @@
+.con{
+    display: flex;
+    flex-direction: row;
+}
+
 .playerList{
     width: 100%;
     max-height: 650px;
@@ -53,10 +58,43 @@
     justify-content: center;
     width: 20%;
     color: #AB9473;
-    margin: 5px;
+    margin: 7px;
     float: left;
+    border: 2px solid #F1BB87;
+    border-radius: 25px;
 }
 
 .notActive{
     opacity: 0.3;
+}
+
+.exchangeBox{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 30%;
+    color: #AB9473;
+    border: 2px solid #F1BB87;
+    border-radius: 25px;
+    padding: 5px;
+    margin: 5px;
+    transition: 0.3s;
+}
+
+.exchangeBoxDisable{
+    display: flex;
+    justify-content: center;
+    width: 30%;
+    color: #AB9473;
+    border: 2px solid #F1BB87;
+    border-radius: 25px;
+    padding: 5px;
+    margin: 5px;
+    opacity: 0.5;
+}
+
+.exchangeBox:hover{
+    background-color: #AB9473;
+    color: #53391E;
+    cursor: pointer;
 }
