--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -132,3 +132,11 @@
     color: #AB9473;
     font-size: 100%;
 }
+
+.href{
+    text-decoration: none;
+    color: #AB9473;
+    font-size: 100%;
+    margin: 7px;
+    font-weight: bolder;
+}
